testdata/asm/invalid/div_01.zkasm
;;error:3:9-10:unexpected target register
fn div(x u16, y u16) -> (q u16, r u16) {
  q, r, x = x / y
  return
}
